# STM32-USBFloppyTracer

./: .gitignore  .gitmodules  .project  Cargo.toml  LICENSE  Notes.txt  README.md  TODO.md
cli/: Cargo.toml
cli/src/: main.rs
doc/: .gitignore  FloppyTurm3.blend  compatibility_list.md  flippy_index.md  sample_wprecomp.cfg  wprecomp.csv  wprecomp.ods  write_precompensation.md
doc/chassis/: Deckel.stl  FloppyTurm3-R_ckseite.stl  FloppyTurm3.3mf  FloppyTurm3.blend  FloppyTurm3.blend1  FloppyTurm3.stl  Zwischenetage.stl
firmware/: .gitignore  Cargo.toml  Embed.toml  memory.x  openocd.cfg  openocd_itm.cfg  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: custom_panic.rs  floppy_control.rs  floppy_drive_unit.rs  floppy_stepper.rs  flux_reader.rs  flux_writer.rs  index_sim.rs  interrupts.rs  iso_blockdevice.rs  main.rs  scsi_class.rs  sector_iso.rs  track_mfm.rs  track_raw.rs  usb.rs  usb_class.rs  vendor_class.rs  write_compensation.rs
gui/: Cargo.toml
gui/src/: main.rs
saleae/: hd_msdos_onlyIdam.csv  hd_msdos_track.csv
scripts/: cleanup.sh  coverage.sh  create_images.sh
tool/: Cargo.toml  build.rs  wrapper.h
tool/src/: drive_speed.rs  image_adf.rs  image_d64.rs  image_g64.rs  image_ipf.rs  image_iso.rs  image_stx.rs  lib.rs  main.rs  rawtrack.rs  usb.rs  usb_commands.rs  usb_device.rs  write_precompensation.rs
tool/src/image_reader/: image_adf.rs  image_d64.rs  image_dsk.rs  image_g64.rs  image_ipf.rs  image_iso.rs  image_stx.rs  mod.rs
tool/src/track_parser/: amiga.rs  c64.rs  iso.rs  mod.rs
udev/: 49-stlinkv1.rules  49-stlinkv2-1.rules  49-stlinkv2.rules  49-stlinkv3.rules  99-usbfloppytracer.rules
util/: Cargo.toml
util/src/: bitstream.rs  c64_geometry.rs  fluxpulse.rs  gcr.rs  lib.rs  mfm.rs
