
[package]
name = "usbfloppytracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.3.34"
fltk-grid = "0.2.0"
fltk-table = "0.2.2"
fltk-theme = "0.6.0"
tool = { path = "../tool" }
util = { path = "../util" }
rusb = "0.9.1"
clap = { version = "4.0.27", features = ["derive"] }
pretty-hex = "0.3.0"
md5 = "0.7.0"
anyhow = "1.0.70"
