[workspace]

[package]
authors = ["Slamy <palmchen1000@web.de>"]
edition = "2018"
readme = "README.md"
name = "stmtest"
version = "0.1.0"

[dependencies]
#cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
# panic-halt = "0.2"
usb-device = "0.2.9"
usbd-serial = "0.1"
heapless = "0.7.16"
util = { path = "../util" }
alloc-cortex-m = "0.4.2"
crc16 = "0.4.0"
ouroboros = "0.15.5"
cassette = "0.2.3"

# Makes this panicked at 'already borrowed: BorrowMutError', src/main.rs:92:37
# debugless-unwrap = "0.0.4"

[dev-dependencies]
nb = "1.0"
# panic-itm = "0.4"

[dependencies.cortex-m]
features = ["inline-asm"]

[dependencies.stm32f4xx-hal]
default-features = true
features = ["rt", "stm32f407", "usb_fs", "otg-fs", "device-selected"]
version = "0.13.2"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "stmtest"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

