[workspace]

[package]
authors = ["Slamy <palmchen1000@web.de>"]
edition = "2018"
readme = "README.md"
name = "stmtest"
version = "0.1.0"

[dependencies]
cortex-m-rt = "0.7.1"
usb-device = "0.2.9"
heapless = "0.7.16"
util = { path = "../util" }
alloc-cortex-m = "0.4.2"
ouroboros = "0.15.5"
cassette = "0.2.3"
rtt-target = { version ="0.3.1", features = ["cortex-m"] }

[dev-dependencies]
nb = "1.0"

[dependencies.cortex-m]
features = ["inline-asm"]
version = "0.7.6"

[dependencies.stm32f4xx-hal]
default-features = true
features = ["rt", "stm32f407", "usb_fs", "otg-fs", "device-selected"]
version = "0.14.0"

[[bin]]
name = "stmtest"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

