
[package]
name = "usbfloppytracer-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.3.34"
fltk-table = "0.3.0"
fltk-theme = "0.7.0"
tool = { path = "../tool" }
util = { path = "../util" }
rusb = "0.9.1"
debugless-unwrap = "0.0.4"
anyhow = "1.0.70"

fltk-grid = {path = "/home/andre/.rhack/fltk-grid-0.3.0"}
